--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@urapywka/vkui": "^0.1.56",
     "core-js": "^3.6.5",
+    "jszip": "^3.5.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
