--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@urapywka/vkui": "^0.1.56",
     "core-js": "^3.6.5",
+    "dexie": "^3.0.3",
     "jszip": "^3.5.0",
     "sql.js": "^1.4.0",
     "vue": "^2.6.11"
