full websql + sqlite viewer impl

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dexie": "^3.0.3",
     "jszip": "^3.5.0",
     "sql.js": "^1.4.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
