--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jszip": "^3.5.0",
     "sql.js": "^1.4.0",
     "vue": "^2.6.11",
+    "vue-virtual-scroll-list": "^2.3.2",
     "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
