--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,7 @@
     "theme_color": "#7190b2",
     "background_color": "#edeef0",
     "display": "fullscreen",
-    "scope": "/",
-    "start_url": "/",
+    "scope": "/vk-export-msg-searcher/",
     "app_name": "VK Export Viewer",
     "short_name": "VK MSG",
     "icons": [
